--- a/app.json
+++ b/app.json
@@ -39,6 +39,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": "https://rork.com/"
+      },
+      "eas": {
+        "projectId": "2e31c915-a849-4d3f-b2b2-62be183db655"
+      }
     }
   }
 }
