--- a/eas.json
+++ b/eas.json
@@ -8,7 +8,9 @@
       "android": {
         "buildType": "apk"
       },
-      "packageManager": "npm"
+      "env": {
+        "NPM_FLAGS": "--legacy-peer-deps"
+      }
     }
   },
   "submit": {
