--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@rork-ai/toolkit-sdk": "^0.2.51",
     "@stardazed/streams-text-encoding": "^1.0.2",
     "@tanstack/react-query": "^5.83.0",
+    "@types/geojson": "7946.0.16",
     "@ungap/structured-clone": "^1.3.0",
     "expo": "~54.0.27",
     "expo-blur": "~15.0.8",
@@ -41,6 +42,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "1.27.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
