--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "start-web-dev": "DEBUG=expo* bunx rork start -p 2sm69mu2c5pgmel6tgdra --web --tunnel",
     "lint": "expo lint"
   },
-  
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@nkzw/create-context-hook": "^1.1.0",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-ml-kit/text-recognition": "^2.0.0",
     "@rork-ai/toolkit-sdk": "^0.2.51",
     "@stardazed/streams-text-encoding": "^1.0.2",
     "@tanstack/react-query": "^5.83.0",
