OCR Google + package

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "bunx rork start -p 2sm69mu2c5pgmel6tgdra --tunnel",
     "start-web": "bunx rork start -p 2sm69mu2c5pgmel6tgdra --web --tunnel",
     "start-web-dev": "DEBUG=expo* bunx rork start -p 2sm69mu2c5pgmel6tgdra --web --tunnel",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
